--- a/FluidConsoleApp/Json/Companies/CompGosi.liquid
+++ b/FluidConsoleApp/Json/Companies/CompGosi.liquid
@@ -7,13 +7,13 @@
     "CRNo": "{% raw %}{{MC.CRNo}}{% endraw %}",
     "NationalNo": "{% raw %}{{NicVerify.NEW_700_ID}}{% endraw %}",
     "IsMain": "true",
-    "MainCR": 0,
+    "MainCR": "",
     "BusinessType": {
         "Id": "{{company.bussinessTypeLookup.code}}",
         "Name": "{{company.bussinessTypeLookup.arabicName}}"
     },
     {%- comment %} Check CRName {% endcomment %}
-    "CRName": "{{company.crInfo.coc.fullCocName}}",
+    "CRName": "{{company.CompanyName}}",
 	"IssueDate": "{{company.PaymentInformation.PaymentDate | date: '%s'}}",
     {%- assign years = company.CrInformation.CrInfoDuration | times: 365 | times: 86400 %}
     "ExpiryDate": "  {{ company.PaymentInformation.PaymentDate | date: '%s' | plus: years }}",
@@ -25,7 +25,7 @@
                 "PartyId":  "{{owner.member.identityNumber}}",
                 {%- assign fullname = owner.member.firstNameAr | append: " " |  append:  owner.member.middleNameAr | append: " " |  append: owner.member.grandNameAr | append: " " |  append:  owner.member.familyNameAr %}
                 "Name": "{{fullname | strip}}",
-                "Birthdate": "{{owner.birthDate | date: '%s'}}",
+                "Birthdate": "{{owner.member.birthDate | date: '%s'}}",
                 "RelationType": {
                     "Id": "{{owner.relationCode}}",
                     "Name": "{{owner.relationNameAr}}"
@@ -45,7 +45,7 @@
                 "PartyId":  "{{manager.member.identityNumber}}",
                 {%- assign mfullname = manager.member.firstNameAr | append: " " |  append:  manager.member.middleNameAr | append: " " |  append: manager.member.grandNameAr | append: " " |  append:  manager.member.familyNameAr %}
                 "Name": "{{mfullname | strip}}",
-                "Birthdate": "{{manager.member.birthDate | date: '%s'}}",
+                "Birthdate": "{{manager.member.BirthDate | date: '%s'}}",
                 "RelationType": {
                     "Id": "{{manager.relationCode}}",
                     "Name": "{{manager.relationNameAr}}"
@@ -81,14 +81,13 @@
     },
     "CRRepresentative": {
         {%- assign representer = company.managers | first %}
-
          "PartyId":  "{{representer.member.identityNumber}}",
             {%- assign representerFullname = representer.member.firstNameAr | append: " " |  append:  representer.member.middleNameAr | append: " " |  append: representer.member.grandNameAr | append: " " |  append:  representer.member.familyNameAr %}
             "Name": "{{representerFullname | strip}}",
             "Birthdate": "{{representer.member.birthDate | date: '%s'}}",
             "RelationType": {
                 "Id": "{{representer.relationCode}}",
-                "Name": ""
+                "Name": "{{representer.relationNameAr}}"
             },
             "Nationality": {
                 {%- assign Nation = lookups.GosiLookups.ManagersNationalities | where: 'Id', representer.member.nationalityLookup.id | first %}
