--- a/FluidConsoleApp/Json/Companies/CompNicCreate.liquid
+++ b/FluidConsoleApp/Json/Companies/CompNicCreate.liquid
@@ -2,7 +2,7 @@
     "Input": {
         "Request_Number": "{{company.requestId}}",
         "New_700_ID": "{% raw %}{{NicVerify.NEW_700_ID}}{% endraw %}",
-        "Firm_Name":  "{{company.crInfo.coc.fullCocName}}",
+        "Firm_Name":  "{{company.CompanyName}}",
         {%- assign firstOwner = company.owners | first %}
         "Firm_Nationality_Code": "{{firstOwner.nationalityLookup.code}}",
         "Issue_DateU": "{{company.PaymentInformation.PaymentDate | date: '%s'}}",
@@ -25,7 +25,7 @@
             "Owner_ID": "{{owner.member.identityNumber}}",
             "LK_Relation_Code": "{{owner.relationCode}}",
             "Percentage": 0.0,
-            "Share": "{{owner.partnerShares}}"
+            "Share": 0.0
         }
         {%- if forloop.last == false -%},{%- endif -%}
         {%- endfor %}
