--- a/FluidConsoleApp/Json/Companies/CompSPBalady.liquid
+++ b/FluidConsoleApp/Json/Companies/CompSPBalady.liquid
@@ -3,11 +3,11 @@
 	"RequestData": {
 		{%- assign days = 365 | times: 86400 %}
 		"EndDateGregoriansU": "{{company.PaymentInformation.PaymentDate |date: '%s'|plus: days  }}",
-		"InvoiceAmount": "{{license.SPBillInfo.TotalAmount}}",
+		"InvoiceAmount": "{{license.SPBillInfo.InvoiceAmount}}",
 		"PaymentMethod": "2",
-		"SettlementAmount": "{{license.SPBillInfo.TotalAmount}}",
+		"SettlementAmount": "{{license.SPBillInfo.SettlementAmount}}",
 		"StartDateGregoriansU": "{{company.PaymentInformation.PaymentDate | date: '%s' }}",
-		"SubscriptionDuration": "365",
+		"SubscriptionDuration":  "{{company.SPBillInfo.SubscriptionDuration}}",
 		"CorporateDetails": {
 			"CID": "{% raw %}{{balady.licenseId}} {% endraw %}",
 			"CIDType": "9",
